# pymvil

./: .gitignore  README.md  build.bat  pyproject.toml
docs/: package_development.puml
src/py_package/: __main__.py
src/pymvil/: __init__.py  __main__.py  create_visualizations.py  mvil.py  no_monotonic_trend_analysis.py  save_result_as_csv.py
src/pymvil/tests/: test_mvil_csv_3_variables.py  test_mvil_csv_n_dependent_variables.py  test_mvil_csv_n_independent_variables_monotonic_trend.py  test_mvil_csv_n_independent_variables_no_monotonic_trend.py  test_mvil_csv_no_monotonic_trend.py  test_mvil_np_array.py
src/pymvil/tests/test_data/: 1500m_08ppg_0_off_hs_data.csv  1500m_14ppg_0_off_hs_data.csv  1500m_hs_coords.csv  hs_coords.csv  hs_coords_2.csv  hs_coords_full.csv  hs_data.csv  hs_data_full.csv  power_coords.csv  power_data.csv
